Fix vertical alignment for list items with multiple content elements
e.g. text & ClickTooltip

--- a/client/components/horizontal-list/style.scss
+++ b/client/components/horizontal-list/style.scss
@@ -52,6 +52,7 @@
 		}
 		.woocommerce-list__item-content {
 			color: $studio-gray-80;
+			display: flex;
 		}
 	}
 	.woocommerce-list__item:first-child {
